--- a/about.html
+++ b/about.html
@@ -50,11 +50,11 @@
                 Open <a href="https://www.google.com/"target="_blank">Google</a> in a new tab.
             </li>
         </ul>
-
+        
     <section></section>
         &lt;&lt;&lt; &copy; <a href="about.html"> Eyüp ERDEM</a> &gt;&gt;&gt;
         <p>
-            <a href="#">Back to Home</a>
+            <a href="index.html">Back to Home</a>
         </p>
     </body>
 
