--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
-
 <body>
 
 <div style="text-align:center"><p>
@@ -30,8 +29,37 @@
 <hr>
 
 <section id="html">
-
+    
 <h2>Ben HTML öğreniyorum</h2>
+<hr>
+
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Voluptates quisquam ipsum at ratione. <span style="color:red"> Ducimus, officia vero velit animi non 
+        voluptatem culpa quidem totam minus voluptates, </span> 
+        laudantium esse sunt eveniet perferendis!
+</p>
+ <div>
+     <strong><em><a href="lorem limpus burda">Lorem İmpus</a></em></strong>
+ </div>
+<div>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <strong>Doloremque reiciendis voluptas blanditiis expedita placeat ad ratione! </strong> 
+         <spans style="color: rebeccapurple;" ;" font:"32" >Dolores minima,</span> libero deleniti nam dolore quis laboriosam veritatis eaque,
+          architecto ullam cupiditate itaque.
+    </p>
+</div>
+
+
+<a href="https://www.kodluyoruz.org/">
+    <picture>
+        <source srcset="https://cdn.sanity.io/images/9kdepi1d/production/65c832d202a503b15d99e628f4313782f3ef50db-300x62.png" media="(min-width: 800px)">
+        
+        <img src="/media/cc0-images/painted-hand-298-332.jpg" alt="" />
+    </picture>
+</a>
+<hr>
 <p>Bu benim ilk sayfam.</p>
 <img src="img/icon.png" alt="HTML 5 Logo"
 title="I am learning HTML5" width="200" height="200">
@@ -41,7 +69,11 @@ title="I am learning HTML5" width="200" height="200">
     <button>Samsung</button>
     <button>Sony</button>
   </div>
-  <iframe width="560" height="315" src="https://youtu.be/n4tK7LYFxI0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+  <img src="https://res.cloudinary.com/canonical/image/fetch/f_auto,q_auto,fl_sanitize,w_442,h_143/https://assets.ubuntu.com/v1/5d05e2fc-II-FF-download-mascots.svg" border="3" alt="ubuntudan aldım">
+  <a href="default.asp">
+  
+  </iframe>
+
   <!--nav element başlangıç-->
   <hr>
   <nav>
@@ -78,4 +110,9 @@ title="I am learning HTML5" width="200" height="200">
       <a href="#">Back to Top</a>
   </p>
   </body>
+  <script>
+    function resimYuklendi(){
+        alert("Resim yüklendi.");
+    }
+</script>
   </html>
